# OxiPaste

./: Cargo.toml  LICENSE  README.md  flake.nix  oxipaste.desktop  result  shell.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-6-link
.github/workflows/: rust.yaml
examples/: README.md  config.toml
nix/: default.nix  hm.nix
src/command_runner/: main.rs
src/daemon/: config.rs  dbus.rs  main.rs  protocol.rs
src/iced-ui/: config.rs  context.rs  custom_rich.rs  main.rs
src/ui/: config.rs  context.rs  custom_rich.rs  main.rs  utils.rs
