[package]
name = "oxipaste"
version = "0.1.0"
edition = "2021"
description = "A clipboard manager daemon written in Rust."
license = "GPL-3.0-only"

[[bin]]
name = "oxipaste_daemon"
path = "src/daemon/main.rs"

#[[bin]]
#name = "oxipaste"
#path = "src/ui/main.rs"

[[bin]]
name = "oxipaste_command_runner"
path = "src/command_runner/main.rs"

[[bin]]
name = "oxipaste-iced"
path = "src/iced-ui/main.rs"


[dependencies]
#dbus = "0.9.7"
#dbus-crossroads = "0.5.2"
#glib = "0.19.0"
#gtk = { version = "0.7.3", package = "gtk4" }
#gtk4-layer-shell = "0.2.0"
#adw = { version = "0.5.3", package = "libadwaita" }

serde = { version = "1.0.210", features = ["derive"] }
wl-clipboard-rs = "0.9.0"
indexmap = "2.5.0"
oxilib = "0.1.2"
#oxiced = { git = "https://github.com/Xetibo/oxiced", branch = "globi" }
oxiced = "0.1.0"
arboard = "3.4.1"
iced = { version = "0.13", features = ["advanced", "canvas", "image"] }
iced_layershell = "0.7.1"
zbus = "4.4.0"
tokio-macros = "2.4.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19.0"
iced_aw = "0.11.0"
toml = "0.8.19"
xdg = "2.5.2"
