[package]
name = "oxipaste"
version = "0.2.0"
edition = "2024"
description = "clipboard manager written in Rust/Iced"
license = "GPL-3.0-or-later"

[[bin]]
name = "oxipaste_daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "oxipaste_command_runner"
path = "src/command_runner/main.rs"

[[bin]]
name = "oxipaste"
path = "src/ui/main.rs"


[dependencies]
arboard = "3.4.1"
iced = { version = "0.13", features = ["advanced", "canvas", "image", "svg"] }
iced_aw = "0.12.2"
iced_layershell = "0.13.6"
indexmap = "2.5.0"
once_cell = "1.19.0"
oxiced = "0.4.0"
oxilib = "0.1.2"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"
toml = "0.8.19"
wayland-client = "0.31.6"
wayland-protocols-wlr = "0.3.4"
wl-clipboard-rs = "0.9.0"
xdg = "3.0.0"
zbus = "5.1.1"
