[package]
name = "oxipaste"
version = "0.2.0"
edition = "2024"
description = "clipboard manager written in Rust/Iced"
license = "GPL-3.0-or-later"

[[bin]]
name = "oxipaste_daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "oxipaste_command_runner"
path = "src/command_runner/main.rs"

[[bin]]
name = "oxipaste"
path = "src/ui/main.rs"

[dependencies]
arboard = "3.5.0"
iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "svg"] }
iced_aw = "0.12.2"
# 13 is broken
iced_layershell = "0.12.0"
indexmap = "2.9.0"
once_cell = "1.21.3"
oxiced = "0.5.1"
oxilib = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.5.0"
toml = "0.8.22"
wayland-client = "0.31.10"
wayland-protocols-wlr = "0.3.8"
wl-clipboard-rs = "0.9.2"
xdg = "3.0.0"
zbus = "5.7.1"
